--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,12 +6,13 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+     {% if site.title == "blank" %}{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %} {% if site.chinese_name %}({{site.chinese_name}}){% endif %}
     </h1>
      <p class="desc">{{ page.description }}</p>
   </header>
+  <hr>
 
-  <article>
+  <br>
     {% if page.profile %}
     <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
       {% if page.profile.image %}
@@ -28,14 +29,6 @@ layout: default
     <div class="clearfix">
       {{ content }}
     </div>
-
-    {% if page.news %}
-      {% include news.html %}
-    {% endif %}
-
-    {% if page.selected_papers %}
-      {% include selected_papers.html %}
-    {% endif %}
 
     {% if page.social %}
     <div class="social">
