--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       {% elsif site.enable_navbar_social %}
         <!-- Social Icons -->
         <div class="navbar-brand social">
-          {% include social.html %}
+          Homepage
         </div>
       {% endif %}
       <!-- Navbar Toggle -->
