--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,32 +12,49 @@ layout: default
   </header>
   <hr>
 
-  <br>
-    {% if page.profile %}
-    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
-      {% if page.profile.image %}
-        <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
-      {% endif %}
-      {% if page.profile.address %}
-        <div class="address">
-          {{ page.profile.address }}
+  <article>
+    {% if page.profile -%}
+    <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
+      {%- if page.profile.image %}
+        {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
+
+        {% if page.profile.image_circular %}
+          {%- assign profile_image_class = "img-fluid z-depth-1 rounded-circle" -%}
+        {% else %}
+          {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
+        {% endif %}
+
+        {% include figure.html 
+        path=profile_image_path 
+        class=profile_image_class
+        alt=page.profile.image -%}
+      {% endif -%}
+      {%- if page.social %}
+      <!-- Social -->
+      <div class="social">
+        <div class="contact-icons">
+        {% include social.html %}
         </div>
-      {% endif %}
+        <div class="contact-note">
+          {{ site.contact_note }}
+        </div>
+      </div>
+      {%- endif %}
     </div>
-    {% endif %}
+    {%- endif %}
 
     <div class="clearfix">
       {{ content }}
     </div>
 
-    {% if page.social %}
+    <!-- {% if page.social %}
     <div class="social">
       <div class="contact-icons">
         {% include social.html %}
       </div>
       <div class="contact-note">{{ site.contact_note }}</div>
     </div>
-    {% endif %}
+    {% endif %} -->
   </article>
 
 </div>
